[gd_scene load_steps=2 format=3 uid="uid://272eysigoacq"]

[ext_resource type="Script" path="res://ui/notifications/notifications_ui.gd" id="1_v8wpd"]

[node name="NotificationsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_v8wpd")

[node name="RegularNotifications" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(310, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -310.0
offset_bottom = 100.0
grow_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 8

[node name="StaticNotificationsScroll" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="StaticNotifications" type="VBoxContainer" parent="StaticNotificationsScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 1
